# postgraduate-artificial-intelligence

./: README.md  README.md
Semester A/Artificial Intelligence/: README.md
Semester A/Artificial Intelligence in Games/: README.md
Semester A/Artificial Intelligence in Games/Week 1/: Week 1 Session 1.docx
Semester A/Artificial Intelligence in Games/labs/Lab 1/: Results.docx
Semester A/Artificial Intelligence in Games/labs/Lab 2/: Kratos.java
Semester A/Artificial Intelligence in Games/labs/Lab 3/: Results.docx
Semester A/Artificial Intelligence/pastpapers/: 2014.docx  2015.docx  2016.docx  2017.docx  2018.docx  2019.docx
Semester A/Machine Learning/: README.md
Semester A/Machine Learning/pastpapers/: 2014.docx  2015.docx  2016.docx  2017.docx  2018.docx  2019.docx  2021.docx
Semester A/Natural Language Processing/: README.md
Semester B/Advanced Robotics/: README.md
Semester B/Advanced Robotics/projects/project1/: CMakeLists.txt  README.md  package.xml
Semester B/Advanced Robotics/projects/project1/launch/: cubic_traj_gen.launch
Semester B/Advanced Robotics/projects/project1/msg/: cubic_traj_coeffs.msg  cubic_traj_params.msg
Semester B/Advanced Robotics/projects/project1/scripts/: compute_cubic_coeffs.py  cubic_traj_planner.py  plot_cubic_traj.py  points_generator.py
Semester B/Advanced Robotics/projects/project1/srv/: compute_cubic_traj.srv
Semester B/Advanced Robotics/projects/project2/: CMakeLists.txt  README.md  package.xml
Semester B/Advanced Robotics/projects/project2/scripts/: move_panda_square.py  square_size_generator.py
Semester B/Computational Creativity/: README.md
Semester B/Deep Learning and Computer Vision/: README.md
Semester B/Deep Learning for Audio and Music/: README.md
Semester B/Information Retrieval/: README.md
Semester B/Interactive Agents & Procedural Generation/: README.md
Semester B/Music Informatics/: README.md
Semester B/Neural Networks and NLP/: README.md
(+147 files in other folders)
